[package]
name = "zone-prover-sp1-program"
description = "SP1 guest program wrapper for the zone prover"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["network"] }

[build-dependencies]
sp1-build = "6.0.1"

[dev-dependencies]
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-evm = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
revm = { workspace = true }
reth-primitives-traits = { workspace = true }
serde_json = { workspace = true }
tempo-chainspec = { workspace = true }
tempo-evm = { workspace = true }
tempo-primitives = { workspace = true }
tempo-revm = { workspace = true }
tokio = { workspace = true }
zone-prover = { workspace = true, features = ["serde", "test-utils"] }
zone-test-utils = { workspace = true }
