[package]
name = "zone-prover"
description = "Pure state transition function for zone batch proving"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives = { workspace = true, features = ["map"] }
alloy-rlp.workspace = true
alloy-sol-types.workspace = true
alloy-consensus.workspace = true
alloy-evm.workspace = true
alloy-trie = "0.9"
nybbles = "0.4"

# revm
revm.workspace = true

# tempo
tempo-chainspec.workspace = true
tempo-evm = { workspace = true, features = ["rpc", "engine"] }
tempo-revm.workspace = true
tempo-primitives.workspace = true

# reth
reth-primitives-traits.workspace = true

# misc
serde = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde", "alloy-primitives/serde"]
test-utils = []

[dev-dependencies]
alloy-consensus.workspace = true
alloy-rlp.workspace = true
alloy-trie = "0.9"
tempo-primitives.workspace = true
zone-prover = { path = ".", features = ["test-utils"] }
zone-test-utils.workspace = true
