[package]
name = "zone-test-utils"
description = "Shared test utilities for zone contract deployment and EVM setup"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-consensus.workspace = true
alloy-evm.workspace = true
alloy-primitives = { workspace = true, features = ["map"] }
alloy-rlp.workspace = true
alloy-sol-types.workspace = true

# revm
revm.workspace = true

# tempo
tempo-chainspec.workspace = true
tempo-evm = { workspace = true, features = ["rpc", "engine"] }
tempo-primitives.workspace = true
tempo-revm.workspace = true

# misc
const-hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
