[package]
name = "zone-prover-sp1-guest"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy-primitives = { version = "1.5.4", default-features = false }
sp1-zkvm = "6.0.1"
zone-prover = { path = "../../zone-prover", default-features = false, features = ["serde"] }

[workspace]
